[package]
name = "tiny_melody_server"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
warp = "0.3.6"
id3 = "1.13.1"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
lto = true