[package]
name = "tiny_melody_server"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
id3 = "1.13.1"
rocket = "0.5.0"
serde_json = "1.0.114"
pretty_env_logger = "0.5.0"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
lto = true