[package]
name = "tiny-melody-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
id3 = "1.13.1"
config = "0.14.0"
serde_json = "1.0.114"
# pretty_env_logger = "0.5.0"
tokio = { version = "1.36.0", features = ["full"] }

[profile.release]
lto = true